--- a/QuasarExtension/QuasarExtension/QuasarFunctionTestWindow.xaml
+++ b/QuasarExtension/QuasarExtension/QuasarFunctionTestWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="QuasarExtension.QuasarWindow"
+﻿<Window x:Class="QuasarExtension.QuasarFunctionTestWindow"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -8,7 +8,7 @@
              d:DesignHeight="450" d:DesignWidth="600" Width="450" Height="450">
     <Grid Name="MainGrid" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
         <ScrollViewer>
-            <TextBlock Width="Auto" TextWrapping="Wrap" Background="#2d2d2d" HorizontalAlignment="Stretch" Text="{Binding CurrentNodes}" FontFamily="Gill Sans MT"
+            <TextBlock Width="Auto" TextWrapping="Wrap" Background="#2d2d2d" HorizontalAlignment="Stretch" Text="{Binding Output}" FontFamily="Gill Sans MT"
                    Padding="10" FontWeight="Medium" FontSize="18" Foreground="Ivory" />
         </ScrollViewer>
     </Grid>
